just updated color scheme

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 </head>
 
-<body onload="init()" style="height:90%;">
+<body id="default" onload="init()" style="height:90%;">
 
     <div id="coverup" style="display:none;" onclick="clearOptions()"></div>
 
@@ -98,7 +98,7 @@
                 <li class="title">
                     August
                     <br>
-                    <span style="font-size:18px">2016</span>
+                    <span>2016</span>
                 </li>
             </ul>
         </div>
