added pouchdb and started db structure

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
     <title>Tracker.Run</title>
 
+    <!-- Include PouchDB code -->
+    <script src="http://cdn.jsdelivr.net/pouchdb/6.1.1/pouchdb.min.js"></script>
+
     <!-- Include jQuery Mobile stylesheets -->
     <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
 
