working on log doc updates

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
         </div>
         <div id="input-frame">
             <p>Notes</p>
-            <textarea cols="30" rows="2"></textarea>
+            <textarea id="activity-text-input" cols="30" rows="2"></textarea>
         </div>
 
-        <button>Submit</button>
+        <button onclick="addToLog()">Submit</button>
 
     </div>
 
